--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <th>만나는 장소</th>
-                <td>집 앞 4거리에서 아무 카페</td>
+                <td>스타벅스 부산대연못골점(부산 남구 못골로 87)</td>
             </tr>
         </table>
         <p class="footer">* 본 확인서는 일정 관리 목적으로 작성되었습니다.</p>
