--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>일정 확인서</title>
+    <title>해부학 및 생리학 단어장</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div class="receipt">
-        <h1>일정 확인서</h1>
-        <table>
-            <tr>
-                <th>날짜</th>
-                <td>11월 16일 토요일</td>
-            </tr>
-            <tr>
-                <th>시간</th>
-                <td>오후 3시</td>
-            </tr>
-            <tr>
-                <th>만나는 사람</th>
-                <td>김성민 선배</td>
-            </tr>
-            <tr>
-                <th>목적</th>
-                <td>빅데이터 과제</td>
-            </tr>
-            <tr>
-                <th>만나는 장소</th>
-                <td>스타벅스 부산대연못골점(부산 남구 못골로 87)</td>
-            </tr>
-        </table>
-        <p class="footer">* 본 확인서는 일정 관리 목적으로 작성되었습니다.</p>
+    <div class="container">
+        <h1>해부학 및 생리학 단어장</h1>
+        <div class="word-list">
+            <div class="word-item">
+                <div class="word">Cardiac Muscle</div>
+                <div class="definition">심장에서만 발견되는 근육으로, 혈액을 펌프하는 역할을 한다.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Neuron</div>
+                <div class="definition">신경계에서 메시지를 전달하는 세포.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Plasma</div>
+                <div class="definition">혈액의 맑고 황색의 액체 부분으로, 물, 단백질 및 기타 영양소를 포함한다.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Aorta</div>
+                <div class="definition">몸의 나머지 부분에 산소화된 혈액을 공급하는 가장 큰 동맥.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Heart</div>
+                <div class="definition">혈액을 순환시키는 주요 기관으로, 두 개의 심방과 두 개의 심실을 가진다.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Blood Vessels</div>
+                <div class="definition">혈액이 흐르는 통로로, 동맥, 정맥, 모세혈관으로 나뉜다.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Muscle</div>
+                <div class="definition">신체의 움직임을 담당하는 조직.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Liver</div>
+                <div class="definition">신체에서 해독, 대사 및 저장 기능을 수행하는 주요 기관.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Brain</div>
+                <div class="definition">중추 신경계를 구성하며, 생각, 감정, 기억 및 운동을 조절한다.</div>
+            </div>
+            <div class="word-item">
+                <div class="word">Lungs</div>
+                <div class="definition">산소를 흡수하고 이산화탄소를 배출하는 기관.</div>
+            </div>
+            <!-- 추가 단어들 여기 입력 -->
+        </div>
     </div>
 </body>
-
 </html>
